...
                                <connections>
                                    <segue destination="2BI-mD-Qqj" kind="show" identifier="detailView" id="ETl-b8-azn"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="mainTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="BYZ-38-t0r" id="ktE-nx-jpA"/>
                            <outlet property="delegate" destination="BYZ-38-t0r" id="ktS-SK-zRp"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Recipes" id="ELK-uN-sm3">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="UHm-4N-WV2">
                            <connections>
                                <segue destination="mK2-oB-5eW" kind="show" id="HFZ-GC-BAg"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCb-F8-Di5">
                                <rect key="frame" x="0.0" y="527" width="375" height="70"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="toZ-xY-Yji"/>
                                </constraints>
                                <state key="normal" title="Add">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="addRecipe:" destination="mK2-oB-5eW" eventType="touchUpInside" id="81X-5U-wd3"/>
                                </connections>
                            </button>
...
                            <constraint firstAttribute="trailing" secondItem="If1-hR-N9y" secondAttribute="trailing" id="vBm-d8-jon"/>
                            <constraint firstItem="Bzb-VY-brT" firstAttribute="centerY" secondItem="MFx-N9-7eC" secondAttribute="centerY" id="zFX-cW-tTm"/>
                            <constraint firstItem="GyJ-pA-PeD" firstAttribute="leading" secondItem="JCb-F8-Di5" secondAttribute="leading" id="zju-ET-ROV"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="qOM-EF-F8U"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add Recipe" id="OBz-eU-rD9">
                        <barButtonItem key="rightBarButtonItem" enabled="NO" style="plain" systemItem="done" id="T5R-h2-POH">
                            <connections>
                                <action selector="addButton_click:" destination="mK2-oB-5eW" id="g1Q-34-Dww"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
